change test code for jre8