@@ -9,6 +9,7 @@ import org.junit.jupiter.params.provider.CsvSource;
 
 import java.net.URI;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -19,7 +20,7 @@ class JavaMailParserTest {
     @CsvSource({"/umlaute.mbox,test öööääüüü", "/Einladung Hochzeit.mbox,Liebe Grüße"})
     void should_parse_charset(String resource, String expected) throws Exception {
         URI uri = JavaMailParserTest.class.getResource(resource).toURI();
-        Path file = Path.of(uri);
+        Path file = Paths.get(uri);
         JavaMailParser sut = new JavaMailParser(file);
         Message message = sut.parse();
         String bodyText = message.getBodyText();
@@ -29,7 +30,7 @@ class JavaMailParserTest {
     @Test
     void unnamed_attachments_should_be_named_unknown() throws Exception {
         URI uri = JavaMailParserTest.class.getResource("/unnamed-attachment.eml").toURI();
-        Path file = Path.of(uri);
+        Path file = Paths.get(uri);
         JavaMailParser sut = new JavaMailParser(file);
         Message message = sut.parse();
         List<Attachment> attachments = message.getAttachments();
